[gd_scene load_steps=2 format=3 uid="uid://berkrmqhgdyoy"]

[ext_resource type="Script" path="res://scenes/TileSelector.gd" id="1_nmw86"]

[node name="TileSelector" type="Node3D"]
script = ExtResource("1_nmw86")

[node name="SelectionTime" type="Timer" parent="."]
wait_time = 0.1
one_shot = true

[connection signal="timeout" from="SelectionTime" to="." method="enable_selection"]
